Обновление API для создания пользователя: - Изменены ссылки на схемы в swagger.json и swagger.yaml для использования новых определений. - Добавлены новые структуры и методы для работы с пользователями в доменной модели. - Реализована валидация данных пользователя при создании. - Добавлены обработчики ошибок и улучшена обработка HTTP-запросов и ответов. - Удалены устаревшие файлы и код, связанные с предыдущей реализацией. - Добавлены новые зависимости для валидации и работы с PostgreSQL.
