# internal/core/features/users/repository/models.go
@@ -1,0 +1,11 @@
+package users_repository
+
+import "time"
+
+type UserModel struct {
+	ID int
+	Version int
+	Email string
+	Password string 
+	CreatedAt time.Time
+}
